@@ -2,7 +2,12 @@
 
 namespace App\Helpers;
 
+use Money\Money;
 use App\Models\Settings\Currency;
+use Illuminate\Support\Facades\App;
+use Money\Currencies\ISOCurrencies;
+use Money\Currency as MoneyCurrency;
+use Money\Formatter\IntlMoneyFormatter;
 
 class MoneyHelper
 {
@@ -27,16 +32,18 @@ class MoneyHelper
             $currency = auth()->user()->currency;
         }
 
-        if ($currency) {
-            switch ($currency->iso) {
-                case 'BRL':
-                    $amount = number_format($amount, 2, ',', '.');
-                    break;
-            }
+        if (! $currency) {
+            $numberFormatter = new \NumberFormatter(App::getLocale(), \NumberFormatter::DECIMAL);
 
-            $amount = $currency->symbol.$amount;
+            return $numberFormatter->format($amount);
         }
 
-        return (string) $amount;
+        $money = new Money($amount * 100, new MoneyCurrency($currency->iso));
+        $currencies = new ISOCurrencies();
+
+        $numberFormatter = new \NumberFormatter(App::getLocale(), \NumberFormatter::CURRENCY);
+        $moneyFormatter = new IntlMoneyFormatter($numberFormatter, $currencies);
+
+        return $moneyFormatter->format($money);
     }
 }
